update personal project

--- a/resume/personalproject.tex
+++ b/resume/personalproject.tex
@@ -11,7 +11,7 @@
 %---------------------------------------------------------
   \cvhonor
     {Restqa.io} % Position
-    {Collaborative Rest Api testing tool (NodeJs, Electron, mongoDb, git-backed, Docker, aws)} % Committee
+    {Collaborative Rest Api testing tool (NodeJs, Electron, Python,  MongoDb, git-backed, Docker, aws)} % Committee
     {Under development} % Location
     {2018} % Date(s)
 %  \cvhonor
@@ -22,7 +22,7 @@
 %---------------------------------------------------------
   \cvhonor
     {Bolibot.io} % Position
-    {Translation Slack bot (Slack, NodeJs, Firebase, Docker, Heroku)} % Committee
+    {Translation Slack bot (Slack, NodeJs, google api, Firebase, Docker, Heroku)} % Committee
     {In service} % Location
     {2016} % Date(s)
 %---------------------------------------------------------
