--- a/resume/education.tex
+++ b/resume/education.tex
@@ -19,6 +19,7 @@
         \item {Adobe Advance tool to buid RIA (Riche Internet Application), based on Flash Actionscript. Dead in 2010.}
       \end{cvitems}
     }
+    { } % Techno
 %---------------------------------------------------------
   \cventry
     {Web Developer Degree} % Degree
@@ -30,6 +31,7 @@
         \item {Introduction to different web development practices}
       \end{cvitems}
     }
+    { } % Techno
 
 %---------------------------------------------------------
   \cventry
@@ -45,6 +47,7 @@
         \item {Thai Beginner}
       \end{cvitems}
     }
+    { } % Techno
 
 %---------------------------------------------------------
 \end{cventries}
