--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -28,9 +28,32 @@
         \item {Implement continuous testing on production (api contract, api gateway config, api behavior)}
         \item {Onboard and support new public partner api consumers}
         \item {Deployed a centralized monitoring environment(Grafana, InfluxDB, CollectD) which gather system metrics as well as docker run-time metrics.}
-        \item {Promote the data driven practice by leveraging our big data platform.}
+        \item {Promote the data driven practice by leveraging our big data platform to monitor the api performance and suspicious request}
         \item {Build an extrem confidence within the team to release at any moment}
       \end{cvitems}
+    }
+    {
+      \#NodeJs ~
+      \#python ~
+      \#Golang ~
+      \#GoCd ~
+      \#Redis ~
+      \#Kong ~
+      \#Keycloak ~
+      \#Rabbimq ~
+      \#Hadoop ~
+      \#Oracle ~
+      \#MsSql ~
+      \#MongoDb ~
+      \#ElasticSearch ~
+      \#Microservices ~
+      \#ContinousTesting ~
+      \#Kibana ~
+      \#Kubernetes ~
+      \#Openshift ~
+      \#OpenApi ~
+      \#TDD ~
+      \#BDD
     }
 
 %---------------------------------------------------------
@@ -48,6 +71,17 @@
         \item {Track metrics on every online product (Tag commander, Google Analytics, AT internet, Facebook pixel)}
         \item {Setup a display digital analytics dashboard. (Google Analytics API, JIRA API, Jenkins API, NodeJs, Openshift)}
       \end{cvitems}
+    }
+    {
+      \#Javascript ~
+      \#NodeJs ~
+      \#AngularJs ~
+      \#Jenkins ~
+      \#Docker ~
+      \#TDD ~
+      \#Jenkins ~
+      \#Kubernetes ~
+      \#Openshift
     }
 
 %---------------------------------------------------------
@@ -67,6 +101,15 @@
         \item {Setup the deployment Industrialization (Capistrano, Jenkins, Docker)}
       \end{cvitems}
     }
+    {
+      \#php ~
+      \#javascript ~
+      \#AngularJs ~
+      \#D3 ~
+      \#Symphony2 ~
+      \#Jenkins ~
+      \#TDD 
+    }
 
 %---------------------------------------------------------
   \cventry
@@ -83,6 +126,16 @@
         \item {Setup the deployment Industrialization (Mina, Jenkins, Docker)}
       \end{cvitems}
     }
+    {
+      \#ptyhon ~
+      \#Java ~
+      \#Javascript
+      \#Android
+      \#Firebase ~
+      \#AngularJs ~
+      \#googleApi ~
+      \#Aws ~
+    }
 
 %---------------------------------------------------------
   \cventry
@@ -92,11 +145,23 @@
     {Aug. 2011 - Aug. 2014} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Manage PHP development project for 200 000 customers}
+        \item {Develop and contribute to multiple web application used by 200 000 customers}
         \item {Build and deploy a matching algorithm (1.5 M entries)}
         \item {Improve efficiency and quality of the software development}
-        \item {Training, mentored and motivated six new engineers}
+        \item {Trained, mentored and motivated six new engineers}
       \end{cvitems}
+    }
+    {
+      \#php ~
+      \#java ~
+      \#javascript ~
+      \#Zend ~
+      \#Symfony2 ~
+      \#Jenkins ~
+      \#Ldap ~
+      \#Oracle ~
+      \#MsSql ~
+      \#TDD
     }
 
 %---------------------------------------------------------
@@ -108,9 +173,21 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Manage Web/Mobile development project}
+        \item {Matching the technology to the business goals}
         \item {Setup the deployment Industrialization (Mina, Jenkins, Docker) Key contributor in acquiring corporate contracts}
-        \item {Work within think tank and implement ideas on entertainment industry}
       \end{cvitems}
+    }
+    {
+      \#php ~
+      \#java ~
+      \#CSharp ~
+      \#AdobeFlash ~
+      \#Jenkins ~
+      \#Ldap ~
+      \#Android ~
+      \#WindowsPhone ~
+      \#Blackberry ~
+      \#Javascript
     }
 
 %---------------------------------------------------------
