--- a/resume/personalproject.tex
+++ b/resume/personalproject.tex
@@ -11,7 +11,7 @@
 %---------------------------------------------------------
   \cvhonor
     {Restqa.io} % Position
-    {Collaborative Rest Api testing tool (NodeJs, Electron, Python,  MongoDb, git-backed, Docker, aws)} % Committee
+    {Collaborative Rest Api testing tool \#NodeJs \#Electron, \#Python,  \#MongoDb, \#git-backed, \#Docker, \#aws} % Committee
     {Under development} % Location
     {2018} % Date(s)
 %  \cvhonor
@@ -22,19 +22,19 @@
 %---------------------------------------------------------
   \cvhonor
     {Bolibot.io} % Position
-    {Translation Slack bot (Slack, NodeJs, google api, Firebase, Docker, Heroku)} % Committee
+    {Translation Slack bot \#Slack \#NodeJs \#googleApi \#Firebase \#Docker \#Heroku} % Committee
     {In service} % Location
     {2016} % Date(s)
 %---------------------------------------------------------
   \cvhonor
     {Cookinky.com} % Position
-    {Bio recipe sharing platform (Php, Symfony, RabbitMq, NodeJs,  Docker, Aws, Mysql, ElasticSearch)} % Committee
+    {Bio recipe sharing platform \#Php \#Symfony \#RabbitMq \#NodeJs  \#Docker \#Aws \#Mysql \#ElasticSearch} % Committee
     {Out of service} % Location
     {2014} % Date(s)
 %---------------------------------------------------------
   \cvhonor
     {Vaniadiary.com} % Position
-    {HairDress salon managment tool (Php, Symfony, RabbitMq, NodeJs, Aws, Mysql, Ldap)} % Committee
+    {HairDress salon managment tool \#Php \#Symfony \#RabbitMq \#NodeJs \#Aws \#Mysql \#Ldap} % Committee
     {Out of service} % Location
     {2013} % Date(s)
 
