--- a/resume/extracurricular.tex
+++ b/resume/extracurricular.tex
@@ -22,6 +22,7 @@
         \item {Share delivery experience on  agile environment}
       \end{cvitems}
     }
+    { } % Technologies
 
 
 %---------------------------------------------------------
