--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -11,24 +11,24 @@
 
 %---------------------------------------------------------
   \cventry
-    {Software Architect - API owner} % Job title
+    {Software Architect - API Product Owner} % Job title
     {Krungthai-Axa} % Organization
     {Bangkok - Thailand} % Location
     {Sept. 2016 - PRESENT} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Implement the Company Business API on a microservice architecture}
-        \item {Drive the Business api as a product}
+        \item {Drive the Business Api as a product}
         \item {Enable the business agility by providing a short feedback loop}
-        \item {Design the overall api architecture around 3 main principles : data, security and developer experience}
-        \item {Implement an internal API portal as the main source of truth for the private and public api}
+        \item {Design the overall Api architecture around 3 main principles : data, security and developer experience}
+        \item {Implement an internal API portal as the main source of truth by sharing the api contract, uml diagram, api logs, etc...}
         \item {Implement a contribution model around APIs. Share the api ownership across the stakholders, product owners or developers}
-        \item {Speed up the continuous delivery practice by using a chatops. From 1 hours to 15 mins. From 1 release a month to 1 release a day}
-        \item {Built fully automated CI/CD pipelines on GoCd for containerized applications using Docker, AWS and Openshift.}
-        \item {Implement continuous testing on production (api contract, api gateway config, api behavior)}
-        \item {Onboard and support new public partner api consumers}
-        \item {Deployed a centralized monitoring environment(Grafana, InfluxDB, CollectD) which gather system metrics as well as docker run-time metrics.}
-        \item {Promote the data driven practice by leveraging our big data platform to monitor the api performance and suspicious request}
+        \item {Speed up the continuous delivery practice by leveraging a chatops. From 1 release a month to 1 release a day}
+        \item {Built fully automated CI/CD pipelines on GoCd for containerized applications using Docker, Openshift and Kubernetes.}
+        \item {Implement continuous testing on production (Test the api contract, api gateway config and api behavior)}
+        \item {Onboard and support new public api consumers}
+        \item {Deployed a centralized monitoring environment(AppMetrics, Grafana, prometheus) which gather system metrics.}
+        \item {Promote the data driven practice by leveraging the big data platform to monitor the api performance and suspicious request}
         \item {Build an extrem confidence within the team to release at any moment}
       \end{cvitems}
     }
@@ -66,8 +66,8 @@
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Agile coaching (Scrum Ceremonies, involving the B.U.)}
         \item {Lean startup methodology (improved conversion rate 0.3\% to 25\%) Technical training to the local team}
-        \item {Setup API middleware (NodeJs)}
-        \item {Add Penetration tests on the continuous integration pipeline}
+        \item {Setup API middleware (NodeJs) to launch a Mobile app}
+        \item {Create a  Penetration tests step on the continuous integration pipeline}
         \item {Track metrics on every online product (Tag commander, Google Analytics, AT internet, Facebook pixel)}
         \item {Setup a display digital analytics dashboard. (Google Analytics API, JIRA API, Jenkins API, NodeJs, Openshift)}
       \end{cvitems}
@@ -96,7 +96,7 @@
         \item {Technical presentations}
         \item {Big Data Visualization}
         \item {Frontend application (AngularJs)}
-        \item {Convert backend to API micro-service (NodeJs, REST Api)}
+        \item {Convert a monolith backend to an API micro-service (NodeJs, REST Api)}
         \item {Increase productivity by automating the test approach (unit test, functional test)}
         \item {Setup the deployment Industrialization (Capistrano, Jenkins, Docker)}
       \end{cvitems}
@@ -120,16 +120,16 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Build the MVP mobile app}
-        \item {Lead the Front-end development department (NodeJs)}
-        \item {Create a backend API Micro services (Python, Firebase)}
+        \item {Lead the Front-end development department}
+        \item {Create a backend API Micro services}
         \item {Growth Hacking Strategy: website scrapping, collected over 3,000 lead email contacts.}
-        \item {Setup the deployment Industrialization (Mina, Jenkins, Docker)}
+        \item {Setup the deployment Industrialization}
       \end{cvitems}
     }
     {
       \#ptyhon ~
       \#Java ~
-      \#Javascript
+      \#NodeJs
       \#Android
       \#Firebase ~
       \#AngularJs ~
@@ -154,7 +154,8 @@
     {
       \#php ~
       \#java ~
-      \#javascript ~
+      \#NodeJS ~
+      \#AngularJs ~
       \#Zend ~
       \#Symfony2 ~
       \#Jenkins ~
@@ -174,7 +175,7 @@
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Manage Web/Mobile development project}
         \item {Matching the technology to the business goals}
-        \item {Setup the deployment Industrialization (Mina, Jenkins, Docker) Key contributor in acquiring corporate contracts}
+        \item {Setup the deployment Industrialization Key contributor in acquiring corporate contracts}
       \end{cvitems}
     }
     {
