--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -10,21 +10,21 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Recently Api Product Owner on the International company Axa. 11+ years experience specializing in the backend development. Agile enthousiast, I love to speed the feedback loop through team collaboration and tool automation. Programming addict, i'm maintaining my passion by keep following and practicing the last trends.
-\\
-\\
- \#OpenApi
- \#Nodejs
- \#golang
- \#Docker
- \#Kubernetes
- \#Openshift
- \#AWS
- \#MongoDb
- \#Oracle
- \#ElasticSearch
- \#CI/CD/CT
- \#BDD 
-
-
+Recently Api Product Owner on the Axa corporation. 11+ years experience specializing in the backend development. Agile enthousiast, I love to speed the feedback loop through team collaboration and tool automation. Programming addict, i'm maintaining my passion by keep following and practicing the last trends.
 \end{cvparagraph}
+\begin{cvtechnologies}
+ \#OpenApi ~
+ \#Nodejs ~
+ \#golang ~
+ \#Docker ~
+ \#Kubernetes ~
+ \#Openshift ~
+ \#AWS ~
+ \#MongoDb ~
+ \#Oracle ~
+ \#ElasticSearch ~
+ \#ContinuousIntegration ~
+ \#ContinuousDelivery ~
+ \#ContinuousTesting ~
+ \#BDD 
+\end{cvtechnologies}
