--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -10,7 +10,7 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Recently Api Product Owner on the Axa corporation. 11+ years experience specializing in the backend development. Agile enthousiast, I love to speed the feedback loop through team collaboration and tool automation. Programming addict, i'm maintaining my passion by keep following and practicing the last trends.
+Recently Api Product Owner on the Axa corporation. 11+ years experience specializing in the backend development. Agile enthusiast, I love to speed the feedback loop through team collaboration and tool automation. Programming addict, i'm maintaining my passion by keep following and practicing the last trends.
 \end{cvparagraph}
 \begin{cvtechnologies}
  \#OpenApi ~
