--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -33,6 +33,7 @@
       \end{cvitems}
     }
     {
+      \#Agile ~
       \#NodeJs ~
       \#python ~
       \#Golang ~
@@ -73,6 +74,7 @@
       \end{cvitems}
     }
     {
+      \#Agile ~
       \#Javascript ~
       \#NodeJs ~
       \#AngularJs ~
@@ -102,6 +104,7 @@
       \end{cvitems}
     }
     {
+      \#Agile ~
       \#php ~
       \#javascript ~
       \#AngularJs ~
@@ -152,6 +155,7 @@
       \end{cvitems}
     }
     {
+      \#Agile ~
       \#php ~
       \#java ~
       \#NodeJS ~
