--- a/resume.tex
+++ b/resume.tex
@@ -56,7 +56,8 @@
 %\photo[rectangle,edge,right]{./examples/profile}
 \name{Olivier}{Rodomond}
 \position{Api Product Owner{\enskip\cdotp\enskip}Software Architect}
-\address{-- French -- \\ Bangkok - Thailand}
+% \address{-- French -- \\ Bangkok - Thailand}
+\address{Bangkok - Thailand}
 
 % \mobile{(+82) 10-9030-1843}
 \email{hi@olivierodo.me}
