--- a/resume/education.tex
+++ b/resume/education.tex
@@ -35,8 +35,8 @@
 
 %---------------------------------------------------------
   \cventry
-    {Languages} % Institution
-    {\#} % Institution
+    {} % Institution
+    {\# Languages} % Institution
     { } % Location
     { } % Date(s)
     {
