--- a/resume/extracurricular.tex
+++ b/resume/extracurricular.tex
@@ -13,13 +13,13 @@
   \cventry
     {Engineering mentor} % Affiliation/role
     {Agile \& Delivery Mentors} % Organization/group
-    {Everywhere} % Location
+    {Paris, Bangkok} % Location
     {Jun. 2010 - PRESENT} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item {Free Learn to code session}
-        \item {Free Software engineer coaching to reach professional goals}
-        \item {Share delivery experience on  agile environment}
+        \item {Conduce free Learn to code session}
+        \item {Coaching engineer to reach professional goals}
+        \item {Share continuous delivery experience on  agile environment}
       \end{cvitems}
     }
     { } % Technologies
