--- a/resume/personalproject.tex
+++ b/resume/personalproject.tex
@@ -10,31 +10,37 @@
 
 %---------------------------------------------------------
   \cvhonor
-    {Restqa.io} % Link
-    {Collaborative Rest Api testing tool \#NodeJs \#Electron, \#Python,  \#MongoDb, \#git-backed, \#Docker, \#aws} % Committee
+    {Restqa.io} % Position
+    {Collaborative Rest Api testing tool. \#NodeJs \#Electron, \#Python,  \#MongoDb, \#git-backed, \#Docker, \#aws}
     {Under development} % Location
     {2018} % Date(s)
+  \cvhonor
+    {gh-cv-assistant.olivierodo.me} % Position
+    {A friendly Github bot that helps keeping your resume up to date. \#Gihub bot,\#NodeJs,\#Firebase, \#Docker}
+    {In service} % Location
+    {2018} % Date(s)
+%---------------------------------------------------------
 %  \cvhonor
 %    {linassist.com} % Position
-%    {Line bot connector (Line, slack, salesforce, NodeJs, mongoDb, docker)} % Committee
+%    {Line bot connector (Line, slack, salesforce, NodeJs, mongoDb, docker)}
 %    {In service} % Location
 %    {2017} % Date(s)
 %---------------------------------------------------------
   \cvhonor
-    {Bolibot.io} % Link
-    {Translation Slack bot \#Slack \#NodeJs \#googleApi \#Firebase \#Docker \#Heroku} % Committee
+    {Bolibot.io} % Position
+    {Translation Slack bot.  \#Slack \#NodeJs \#googleApi \#Firebase \#Docker \#Heroku}
     {In service} % Location
     {2016} % Date(s)
 %---------------------------------------------------------
   \cvhonor
-    {Cookinky.com} % Link
-    {Bio recipe sharing platform \#Php \#Symfony \#RabbitMq \#NodeJs  \#Docker \#Aws \#Mysql \#ElasticSearch} % Committee
+    {Cookinky.com} % Position
+    {Bio recipe sharing platform. \#Php \#Symfony \#RabbitMq \#NodeJs  \#Docker \#Aws \#Mysql \#ElasticSearch}
     {Out of service} % Location
     {2014} % Date(s)
 %---------------------------------------------------------
   \cvhonor
-    {Vaniadiary.com} % Link
-    {HairDress salon managment tool \#Php \#Symfony \#RabbitMq \#NodeJs \#Aws \#Mysql \#Ldap} % Committee
+    {Vaniadiary.com} % Position
+    {HairDress salon managment tool. \#Php \#Symfony \#RabbitMq \#NodeJs \#Aws \#Mysql \#Ldap}
     {Out of service} % Location
     {2013} % Date(s)
 
