--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -10,7 +10,9 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Recently Api Product Owner in International corporation. 11+ years experience specializing in the backend development. Agile enthusiast, I love to speed the feedback loop through team collaboration and tool automation. Programming addict, i'm maintaining my passion by keep following and practicing the last trends.
+Recently Api Product Owner in International corporation. 11+ years experience specializing in the backend development.
+Agile enthusiast, I speed up the feedback loop boosted by team collaboration and tool automation.
+Programming addict, i maintain my passion by practicing on regular basis around different personal products.
 \end{cvparagraph}
 \begin{cvtechnologies}
  \#OpenApi ~
