--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -17,17 +17,17 @@
     {Sept. 2016 - PRESENT} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Implement the Company Business API on a microservice architecture}
+        \item {Implement the Company Business API based on a microservice architecture}
         \item {Drive the Business Api as a product}
         \item {Enable the business agility by providing a short feedback loop}
         \item {Design the overall Api architecture around 3 main principles : data, security and developer experience}
-        \item {Implement an internal API portal as the main source of truth by sharing the api contract, uml diagram, api logs, etc...}
+        \item {Share an internal API portal as the main source of truth by distributing the api contract, uml diagram, api logs, etc...}
         \item {Implement a contribution model around APIs. Share the api ownership across the stakholders, product owners or developers}
         \item {Speed up the continuous delivery practice by leveraging a chatops. From 1 release a month to 1 release a day}
         \item {Built fully automated CI/CD pipelines on GoCd for containerized applications using Docker, Openshift and Kubernetes.}
         \item {Implement continuous testing on production (Test the api contract, api gateway config and api behavior)}
         \item {Onboard and support new public api consumers}
-        \item {Deployed a centralized monitoring environment(AppMetrics, Grafana, prometheus) which gather system metrics.}
+        \item {Deploy a centralized monitoring environment(AppMetrics, Grafana, prometheus) which gather system metrics.}
         \item {Promote the data driven practice by leveraging the big data platform to monitor the api performance and suspicious request}
         \item {Build an extrem confidence within the team to release at any moment}
       \end{cvitems}
@@ -66,11 +66,12 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Agile coaching (Scrum Ceremonies, involving the B.U.)}
-        \item {Lean startup methodology (improved conversion rate 0.3\% to 25\%) Technical training to the local team}
+        \item {Lean startup methodology (improved the website conversion rate from 0.3\% to 25\%) }
         \item {Setup API middleware (NodeJs) to launch a Mobile app}
-        \item {Create a  Penetration tests step on the continuous integration pipeline}
+        \item {Include a Penetration tests step on the continuous integration pipeline}
         \item {Track metrics on every online product (Tag commander, Google Analytics, AT internet, Facebook pixel)}
-        \item {Setup a display digital analytics dashboard. (Google Analytics API, JIRA API, Jenkins API, NodeJs, Openshift)}
+        \item {Implement a digital analytics dashboard. (Google Analytics API, JIRA API, Jenkins API, NodeJs, Openshift)}
+        \item {Technical training to the local team}
       \end{cvitems}
     }
     {
