--- a/resume/personalproject.tex
+++ b/resume/personalproject.tex
@@ -10,7 +10,7 @@
 
 %---------------------------------------------------------
   \cvhonor
-    {Restqa.io} % Position
+    {Restqa.io} % Link
     {Collaborative Rest Api testing tool \#NodeJs \#Electron, \#Python,  \#MongoDb, \#git-backed, \#Docker, \#aws} % Committee
     {Under development} % Location
     {2018} % Date(s)
@@ -21,19 +21,19 @@
 %    {2017} % Date(s)
 %---------------------------------------------------------
   \cvhonor
-    {Bolibot.io} % Position
+    {Bolibot.io} % Link
     {Translation Slack bot \#Slack \#NodeJs \#googleApi \#Firebase \#Docker \#Heroku} % Committee
     {In service} % Location
     {2016} % Date(s)
 %---------------------------------------------------------
   \cvhonor
-    {Cookinky.com} % Position
+    {Cookinky.com} % Link
     {Bio recipe sharing platform \#Php \#Symfony \#RabbitMq \#NodeJs  \#Docker \#Aws \#Mysql \#ElasticSearch} % Committee
     {Out of service} % Location
     {2014} % Date(s)
 %---------------------------------------------------------
   \cvhonor
-    {Vaniadiary.com} % Position
+    {Vaniadiary.com} % Link
     {HairDress salon managment tool \#Php \#Symfony \#RabbitMq \#NodeJs \#Aws \#Mysql \#Ldap} % Committee
     {Out of service} % Location
     {2013} % Date(s)
