--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -29,7 +29,7 @@
         \item {Onboard and support new public api consumers}
         \item {Deploy a centralized monitoring environment(AppMetrics, Grafana, prometheus) which gather system metrics.}
         \item {Promote the data driven practice by leveraging the big data platform to monitor the api performance and suspicious request}
-        \item {Build an extrem confidence within the team to release at any moment}
+        \item {Build an extreme confidence within the team to release at any moment}
       \end{cvitems}
     }
     {
