--- a/olivier-rodomond.tex
+++ b/olivier-rodomond.tex
@@ -86,7 +86,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Olivier-Rodomond ~~~·~~~Résumé}
+  {Olivier Rodomond ~~~·~~~Résumé}
   {\thepage}
 
 %-------------------------------------------------------------------------------
