--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -17,7 +17,7 @@
     {Sept. 2016 - PRESENT} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Active member of the digital transformation team}
+        \item {Active leader of the digital transformation team}
         \item {Implement the Company Business API based on a microservice architecture}
         \item {Drive the Business Api as a product}
         \item {Enable the business agility by providing a short feedback loop}
