--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -12,7 +12,7 @@
 %---------------------------------------------------------
 Most recently I was an API Product Owner in an international corporation, where I held a strong leader role throughout the company's digital transformation journey. I have 11+ years’ experience specializing in the backend development and technical team leading.
 As an Agile enthusiast, I speed up the feedback loop boosted by team collaboration and tool automation.
-Self-proclaimed programming addict, I maintain my passion creating online products, connecting with various APIs and contributing to open source projects. If you are looking a transformation specialist to collaborate with your team, I'm the person for you!
+Self-proclaimed programming addict, I maintain my passion by creating online products, connecting with various APIs and contributing to open source projects. If you are looking a transformation specialist to collaborate with your team, I'm the person for you!
 
 \end{cvparagraph}
 \begin{cvtechnologies}
