bolitbot project is out of service

--- a/resume/personalproject.tex
+++ b/resume/personalproject.tex
@@ -29,7 +29,7 @@
   \cvhonor
     {Bolibot.io} % Position
     {Translation Slack bot.  \#Slack \#NodeJs \#googleApi \#Firebase \#Docker \#Heroku}
-    {In service} % Location
+    {Out of service} % Location
     {2016} % Date(s)
 %---------------------------------------------------------
   \cvhonor
