--- a/resume/personalproject.tex
+++ b/resume/personalproject.tex
@@ -15,8 +15,18 @@
     {Under development} % Location
     {2018} % Date(s)
   \cvhonor
+    {lilidesignshop.com} % lien
+    {Design Art, Home &amp; Travel ecommerce website. \#Javascript \#shopify}
+    {In service} % Location
+    {2018} % Date(s)
+  \cvhonor
     {gh-cv-assistant.olivierodo.me} % Position
     {A friendly Github bot that helps keeping your resume up to date. \#Gihub bot,\#NodeJs,\#Firebase, \#Docker}
+    {In service} % Location
+    {2018} % Date(s)
+  \cvhonor
+    {atalent-consulting.com} % link
+    {Business presentation website. \#Javascript \#mailchimp}
     {In service} % Location
     {2018} % Date(s)
 %---------------------------------------------------------
