Fix compiling issue

--- a/resume/personalproject.tex
+++ b/resume/personalproject.tex
@@ -16,7 +16,7 @@
     {2018} % Date(s)
   \cvhonor
     {lilidesignshop.com} % lien
-    {Design Art, Home &amp; Travel ecommerce website. \#Javascript \#shopify}
+    {Design Art, Home and Travel ecommerce website. \#Javascript \#shopify}
     {In service} % Location
     {2018} % Date(s)
   \cvhonor
