--- a/resume/personalproject.tex
+++ b/resume/personalproject.tex
@@ -11,7 +11,7 @@
 %---------------------------------------------------------
   \cvhonor
     {Restqa.io} % Position
-    {Collaborative Rest Api testing tool. \#NodeJs \#Electron, \#Python,  \#MongoDb, \#git-backed, \#Docker, \#aws}
+    {Collaborative Rest Api testing tool. \#NodeJs  \#OpenApi \#Electron, \#Python,  \#MongoDb, \#git-backed, \#Docker, \#aws}
     {Under development} % Location
     {2018} % Date(s)
   \cvhonor
