disable phone number

--- a/olivier-rodomond.tex
+++ b/olivier-rodomond.tex
@@ -59,7 +59,7 @@
 % \address{-- French -- \\ Bangkok - Thailand}
 \address{Bangkok - Thailand}
 
-\mobile{(+66) 909067058}
+% \mobile{(+66) 909067058}
 \email{hi@olivierodo.me}
 \homepage{www.olivierodo.me}
 \github{olivierodo}
