add orange mission

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -9,12 +9,51 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
+  \cventry
+    {Coach API/API proxy product owner - Devops reinforcement} % Job title
+    {Orange} % Organization
+    {Warsaw - Poland} % Location
+    {Sept. 2018 - PRESENT} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Coach the current API team}
+        \item {Share the concept of business API design}
+        \item {Redesign the overall Api architecture around 3 main principles : data, security and developer experience}
+        \item {Redesign and standardize the registration/login flow}
+        \item {Enabling the Business Api as a product}
+        \item {Improve the api security}
+        \item {Enhance the microservice setup}
+        \item {Develop and deploy a few microservice to boost up the delivery}
+        \item {Share an internal API portal to enable api transparency, user account, api logs, etc..}
+        \item {Enhance the continuous delivery strategy}
+        \item {Built fully automated CI/CD pipelines on GoCd for critical components from dev to prod}
+        \item {Support the mobile app team to implement the open id connect registration flow}
+      \end{cvitems}
+    }
+    {
+      \#Agile ~
+      \#Java ~
+      \#GoCd ~
+      \#Redis ~
+      \#Kong ~
+      \#Keycloak ~
+      \#Rabbimq ~
+      \#ReactNative ~
+      \#MongoDb ~
+      \#ElasticSearch ~
+      \#Microservices ~
+      \#Kibana ~
+      \#Kubernetes ~
+      \#OpenApi ~
+      \#BDD
+    }
+
 %---------------------------------------------------------
   \cventry
     {Software Architect - API Product Owner} % Job title
     {Krungthai-Axa} % Organization
     {Bangkok - Thailand} % Location
-    {Sept. 2016 - PRESENT} % Date(s)
+    {Sept. 2016 - Aug. 2018} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Active leader of the digital transformation team}
