--- a/olivier-rodomond.tex
+++ b/olivier-rodomond.tex
@@ -55,9 +55,10 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 %\photo[rectangle,edge,right]{./examples/profile}
 \name{Olivier}{Rodomond}
-\position{Api Product Owner{\enskip\cdotp\enskip}Software Architect}
-% \address{-- French -- \\ Bangkok - Thailand}
-\address{Bangkok - Thailand}
+%\position{Api Product Owner{\enskip\cdotp\enskip}Software Architect}
+\position{Api Specialist Consultant}
+\address{International \\ Bangkok - Thailand}
+%\address{Bangkok - Thailand}
 
 % \mobile{(+66) 909067058}
 \email{hi@olivierodo.me}
