--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -10,7 +10,7 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Most recently I was an API Product Owner in an international corporation, where I held a strong leader role throughout the company's digital transformation journey. I have 11+ years’ experience specializing in the backend development and technical team leading.
+API Product Owner in an international corporation, where I held a strong leader role throughout the company's digital transformation journey. I have 12+ years’ experience specializing in the backend development and technical team leading.
 As an Agile enthusiast, I speed up the feedback loop boosted by team collaboration and tool automation.
 Self-proclaimed programming addict, I maintain my passion by creating online products, connecting with various APIs and contributing to open source projects. If you are looking a transformation specialist to collaborate with your team, I'm the person for you!
 
@@ -26,8 +26,10 @@ Self-proclaimed programming addict, I maintain my passion by creating online pro
  \#Kubernetes ~
  \#Openshift ~
  \#AWS ~
+ \#Gcloud ~
  \#MongoDb ~
- \#Oracle ~
+ \#Kong ~
+ \#Keycloak ~
  \#ElasticSearch ~
  \#ContinuousIntegration ~
  \#ContinuousDelivery ~
