add new experience

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -10,10 +10,56 @@
 \begin{cventries}
 
   \cventry
+    {API product owner - Software Architect - Devops Lead} % Job title
+    {FWD - SCB Life} % Organization
+    {Bangkok - Thailand} % Location
+    {Jan. 2019 - PRESENT} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Build and deliver the first OPEN INSURANCE platform in thailand}
+        \item {Contribute to the API first enterprise vision}
+        \item {Enabling the Business Api as a product}
+        \item {Setup the API team}
+        \item {Share the concept of business API design}
+        \item {Redesign the overall Api architecture around 3 main principles : data, security and developer experience}
+        \item {Redesign and standardize the registration/login flow}
+        \item {Build the Developer Api Portal}
+        \item {Improve the api security}
+        \item {Design the microservice architecture}
+        \item {Setup the enterprise Devop capability}
+        \item {Built fully automated CI/CD pipelines on GoCd for critical components from dev to prod}
+        \item {---}
+        \item {Web Platform: http://developer.scblife.co.th}
+      \end{cvitems}
+    }
+    {
+      \#Agile ~
+      \#Transformation ~
+      \#Nodejs ~
+      \#DotNet ~
+      \#GoCd ~
+      \#Redis ~
+      \#Kong ~
+      \#AWS ~
+      \#IBMConnect ~
+      \#Keycloak ~
+      \#Rabbimq ~
+      \#MongoDb ~
+      \#ElasticSearch ~
+      \#Microservices ~
+      \#Kibana ~
+      \#Kubernetes ~
+      \#BDD
+      \#OpenApi ~
+      \#OpenIdConnect ~
+    }
+
+%---------------------------------------------------------
+  \cventry
     {Coach API/API proxy product owner - Devops reinforcement} % Job title
     {Orange} % Organization
     {Warsaw - Poland} % Location
-    {Sept. 2018 - PRESENT} % Date(s)
+    {Sept. 2018 - Feb. 2019} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Coach the current API team}
@@ -28,6 +74,8 @@
         \item {Enhance the continuous delivery strategy}
         \item {Built fully automated CI/CD pipelines on GoCd for critical components from dev to prod}
         \item {Support the mobile app team to implement the open id connect registration flow}
+        \item {---}
+        \item {Mobile app: Orange Flex}
       \end{cvitems}
     }
     {
@@ -70,6 +118,8 @@
         \item {Deploy a centralized monitoring environment(AppMetrics, Grafana, prometheus) which gather system metrics.}
         \item {Promote the data driven practice by leveraging the big data platform to monitor the api performance and suspicious request}
         \item {Build an extreme confidence within the team to release at any moment}
+        \item {---}
+        \item {Web Platform: http://api.krungthai-axa.co.th}
       \end{cvitems}
     }
     {
