--- a/resume/education.tex
+++ b/resume/education.tex
@@ -43,8 +43,8 @@
       \begin{cvitems} % Description(s) bullet points
         \item {French Native}
         \item {English Fluent}
-        \item {Spanish Intermediate}
         \item {Thai Beginner}
+        \item {Agile Fluent}
       \end{cvitems}
     }
     { } % Techno
