--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -13,7 +13,7 @@
     {API product owner - Software Architect - Devops Lead} % Job title
     {FWD - SCB Life} % Organization
     {Bangkok - Thailand} % Location
-    {Jan. 2019 - PRESENT} % Date(s)
+    {Jan. 2019 - Jun. 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Build and deliver the first OPEN INSURANCE platform in thailand}
