Update the Sumaary after 3 years!

--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -10,9 +10,12 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-API Product Owner in an international corporation, where I held a strong leader role throughout the company's digital transformation journey. I have 12+ years’ experience specializing in the backend development and technical team leading.
-As an Agile enthusiast, I speed up the feedback loop boosted by team collaboration and tool automation.
-Self-proclaimed programming addict, I maintain my passion by creating online products, connecting with various APIs and contributing to open source projects. If you are looking a transformation specialist to collaborate with your team, I'm the person for you!
+
+Head of API Governance in an International corporation, I'm holding a strong leader role throughout the company's digital transformation journey.
+An experienced executive with a demonstrated history of working in the platform of companies. I have built developer's ecosystems, products, and platform companies around the world.
+As an Agile enthusiast, I lead by using short feedback loop boosted by team collaboration and strong tool automation.
+15+ years Self-proclaimed programming addict. I maintain my passion by crafting online products, connecting with various APIs and contributing to open source projects
+
 
 \end{cvparagraph}
 \begin{cvtechnologies}
