Align RestQA information

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -10,10 +10,10 @@
 \begin{cventries}
 
   \cventry
-    {API product owner - Software Architect - Devops Lead} % Job title
-    {FWD - SCB Life} % Organization
+    {Head of API Governance - SVP} % Job title
+    {FWD} % Organization
     {Bangkok - Thailand} % Location
-    {Jan. 2019 - Jun. 2020} % Date(s)
+    {Jan. 2019 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Build and deliver the first OPEN INSURANCE platform in thailand}
