--- a/resume/personalproject.tex
+++ b/resume/personalproject.tex
@@ -11,23 +11,18 @@
 %---------------------------------------------------------
   \cvhonor
     {Restqa.io} % Position
-    {Collaborative Rest Api testing tool. \#NodeJs  \#OpenApi \#Electron, \#Python,  \#MongoDb, \#git-backed, \#Docker, \#aws}
-    {Under development} % Location
-    {2018} % Date(s)
-  \cvhonor
-    {lilidesignshop.com} % lien
-    {Design Art, Home and Travel ecommerce website. \#Javascript \#shopify}
-    {In service} % Location
-    {2018} % Date(s)
-  \cvhonor
-    {gh-cv-assistant.olivierodo.me} % Position
-    {A friendly Github bot that helps keeping your resume up to date. \#Gihub bot,\#NodeJs,\#Firebase, \#Docker}
+    {Open Source End-to- End API testing platform that respects your data privacy \#OpenSource \#BDD  \#ATDD \#OpenApi \#Gherkin \#TestAutomation \#devops}
     {In service} % Location
     {2018} % Date(s)
   \cvhonor
     {atalent-consulting.com} % link
     {Business presentation website. \#Javascript \#mailchimp}
     {In service} % Location
+    {2018} % Date(s)
+  \cvhonor
+    {gh-cv-assistant.olivierodo.me} % Position
+    {A friendly Github bot that helps keeping your resume up to date. \#Gihub bot,\#NodeJs,\#Firebase, \#Docker}
+    {Out of service} % Location
     {2018} % Date(s)
 %---------------------------------------------------------
 %  \cvhonor
