Add CKAD Certification

--- a/resume/education.tex
+++ b/resume/education.tex
@@ -8,6 +8,17 @@
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cventries}
+  \cventry
+    {Certified Kubernetes Application Developer (CKAD)} % Degree
+    {CNCF} % Institution
+    {Bangkok, France} % Location
+    {2021} % Date(s)
+    {
+      \begin{cvitems} % Description(s) bullet points
+        \item {A Certified Kubernetes Application Developer can define application resources and use core primitives to build, monitor, and troubleshoot scalable applications and tools in Kubernetes.}
+      \end{cvitems}
+    }
+    { } % Techno
 
   \cventry
     {Adobe Flex 3 Certification} % Degree
