--- a/olivier-rodomond.tex
+++ b/olivier-rodomond.tex
@@ -87,7 +87,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Olivier Rodomond ~~~·~~~ Resume automated with love using https://github.com/olivierodo/Awesome-CV-action}
+  {Resume automated with love using https://github.com/olivierodo/Awesome-CV-action}
   {\thepage}
 
 %-------------------------------------------------------------------------------
