--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -11,7 +11,7 @@
 
 %---------------------------------------------------------
 
-Head of API Governance in an International corporation, I'm holding a strong leader role throughout the company's digital transformation journey.
+As a senior consultant, I'm holding a strong leader role throughout the company's digital transformation journey.
 An experienced executive with a demonstrated history of working in the platform of companies. I have built developer's ecosystems, products, and platform companies around the world.
 As an Agile enthusiast, I lead by using short feedback loop boosted by team collaboration and strong tool automation.
 15+ years Self-proclaimed programming addict. I maintain my passion by crafting online products, connecting with various APIs and contributing to open source projects
