--- a/olivier-rodomond.tex
+++ b/olivier-rodomond.tex
@@ -56,7 +56,7 @@
 %\photo[rectangle,edge,right]{./examples/profile}
 \name{Olivier}{Rodomond}
 %\position{Api Product Owner{\enskip\cdotp\enskip}Software Architect}
-\position{Api Specialist Consultant}
+\position{Engineering Manager}
 \address{International \\ Bangkok - Thailand}
 %\address{Bangkok - Thailand}
 
